--- a/docker/deb/prepare/Dockerfile
+++ b/docker/deb/prepare/Dockerfile
@@ -8,6 +8,8 @@ RUN apt-get install -y cmake
 RUN apt-get install -y python python-dev
 RUN apt-get install -y python-numpy
 
+RUN apt-get install -y python-pip
+RUN pip install PyCifRW
 
 RUN apt-get install wget
 RUN wget ${PARENT_GITHUB_URL}/releases/download/v${PARENT_VERSION}/${PARENT_PY_PKG}-${PARENT_VERSION}-${PARENT_RELEASE}.x86_64.deb
