--- a/docker/srpm/prepare/Dockerfile
+++ b/docker/srpm/prepare/Dockerfile
@@ -6,5 +6,8 @@ RUN yum install -y deltarpm
 RUN yum install -y git cmake make gcc-c++ python python-devel rpm-build
 RUN yum install -y numpy
 
+RUN yum install -y python-pip
+RUN pip install PyCifRW
+
 RUN rpmbuild --rebuild ${PARENT_GITHUB_URL}/releases/download/v${PARENT_VERSION}/${PARENT_PY_PKG}-${PARENT_VERSION}-${PARENT_RELEASE}.src.rpm
 RUN rpm -i ~/rpmbuild/RPMS/x86_64/${PARENT_PY_PKG}-${PARENT_VERSION}-${PARENT_RELEASE}.x86_64.rpm
