--- a/rpm.spec.in
+++ b/rpm.spec.in
@@ -46,7 +46,7 @@ rm -rf build_tree
 
 %files
 %defattr(-,root,root,-)
-%{prefix}/include/@PARENT_PATH@/@PROJECT_NAME@/*
+# %{prefix}/include/@PARENT_PATH@/@PROJECT_NAME@/*
 %{prefix}/@INSTALL_LIB_DIR@/*
 # %{prefix}/bin/*
 
